<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#088A85"
    android:padding="10sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:background="@drawable/linear_layout">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner"
                    android:background="@drawable/edittext_layout"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:padding="10sp"
                    android:layout_marginBottom="5sp"
                    />

                <Button
                    android:id="@+id/searchType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/lin1"
                android:layout_marginBottom="10sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:background="@drawable/linear_layout">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp">

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:background="@drawable/edittext_layout"
                        android:hint="DD-MM-YYYY"
                        android:padding="10sp"
                        android:layout_marginBottom="5sp"
                        />

                </RelativeLayout>

                <Button
                    android:id="@+id/searchDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/lin2"
                android:layout_marginBottom="10sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:background="@drawable/linear_layout">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/edittext_layout"
                    android:hint="Name"
                    android:padding="10sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    />

                <Button
                    android:id="@+id/searchName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/lin3"
                android:layout_marginBottom="10sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:background="@drawable/linear_layout">

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="Amount"
                    android:background="@drawable/edittext_layout"
                    android:padding="10sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    />

                <Button
                    android:id="@+id/searchAmount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view"
                    />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/viewAll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewall"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
